Fixed submit button alignment on contact.html

--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -227,6 +227,7 @@ footer {
 		color: #999;
 	}
 	input[type="submit"]{
+		text-indent: 0;
 		width: 100%;
 		background: $yellow;
 		color: darken($yellow, 20%);
